--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,11 @@
         <activity android:name=".AddOrDelActivity">
 
         </activity>
+        <activity android:name=".SearchActivity">
+
+        </activity>
+
+
     </application>
 
 </manifest>
