--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         <activity android:name=".UpdateActivity">
 
         </activity>
+        <activity android:name=".RxBindingSearchActivity">
+
+        </activity>
 
 
     </application>
